3. Отсортировать департаменты [#34352 #545907]