@@ -12,8 +12,7 @@ class DepartmentsTest {
     @Test
     void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
-
-        List<String> expected = List.of("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> expected = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expected);
     }
@@ -21,8 +20,7 @@ class DepartmentsTest {
     @Test
     void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-
-        List<String> expected = List.of("k1", "k1/sk1");
+        List<String> expected = Arrays.asList("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsSequence(expected);
     }
@@ -34,8 +32,7 @@ class DepartmentsTest {
                 "K1/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -61,8 +58,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -87,8 +83,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
@@ -113,17 +108,16 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-
-        List<String> expected = List.of(
-                "K2/SK1/SSK2",
-                "K2/SK1/SSK1",
-                "K2/SK1",
+        List<String> expected = Arrays.asList(
                 "K2",
-                "K1/SK2",
-                "K1/SK1/SSK2",
-                "K1/SK1/SSK1",
+                "K2/SK1",
+                "K2/SK1/SSK1",
+                "K2/SK1/SSK2",
+                "K1",
                 "K1/SK1",
-                "K1"
+                "K1/SK1/SSK1",
+                "K1/SK1/SSK2",
+                "K1/SK2"
         );
         Departments.sortDesc(input);
         assertThat(input).containsSequence(expected);
@@ -140,15 +134,14 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-
-        List<String> expected = List.of(
-                "K2/SK1/SSK2",
-                "K2/SK1/SSK1",
+        List<String> expected = Arrays.asList(
                 "K2/SK1",
-                "K1/SK2",
-                "K1/SK1/SSK2",
+                "K2/SK1/SSK1",
+                "K2/SK1/SSK2",
+                "K1/SK1",
                 "K1/SK1/SSK1",
-                "K1/SK1"
+                "K1/SK1/SSK2",
+                "K1/SK2"
         );
         Departments.sortDesc(input);
         assertThat(input).containsSequence(expected);
